--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -106,3 +106,10 @@
 .sredina {
     text-align: center;
 }
+
+#containerSpeed {
+    min-width: 310px;
+    max-width: 800px;
+    height: 400px;
+    margin: 0 auto
+}
