Spremenjen stil tabele pri carsList

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -129,3 +129,15 @@
     color: #6c757d;
     cursor: pointer;
 }
+
+tbody {
+    overflow-y: auto;
+    display: block;
+    max-height: 520px;
+}
+
+thead {
+    display: table;
+    width: 100%;     // Fill the containing table
+}
+
